# dead-drop-teams-1

./: .gitignore  AGENTS.md  CORTANA.md  CURRENT_STATE.md  DEAD_DROP_MCP_FIX.md  Dockerfile  Dockerfile.workspace  HOW_I_FIXED_THE_WATCHER.md  JUNO.md  LICENSE  P2P_COLLAB.md  README.md  SPARTAN.md  possible_upgrades.md  pyproject.toml
agents/: cortana-gemini-config.md  cortana-gemini-setup.sh  juno-gemini-launcher.sh  spartan-gemini-agent.py
docs/: ARCHITECTURE.md  DEAD-DROP-TEAMS-TIMELINE.md  DEAD_DROP.md  GOALS.md  MINION_POLICY.md  PROTOCOL.md  ROLE_COMBOS.md  timeline-core-server.md  timeline-heist-board.md  timeline-hub-infra.md
docs/roles/: builder.md  coder.md  deliverer.md  demoer.md  fixer.md  lead.md  maintainer.md  pen.md  productionalizer.md  pusher.md  researcher.md  reviewer.md  shipper.md  tester.md
scripts/: check-inbox.sh  install-hub.sh  install.sh  poll_inbox.sh  spawn-minion-example.sh  spawn-minion.sh  wait-for-message.sh
src/dead_drop/: __init__.py  archive.py  hub.py  server.py  spawner.py
tests/: test_push_e2e.py
