[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dead-drop-teams"
version = "1.0.0"
description = "MCP server for multi-agent coordination via SQLite message passing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Hung Hoang", email = "hung@convergent.data" }
]
keywords = ["mcp", "multi-agent", "coordination", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=0.1.0",
    "docker>=7.0.0",
]

[project.scripts]
dead-drop-teams = "dead_drop.server:main"
dead-drop-hub = "dead_drop.hub:main"

[project.urls]
Homepage = "https://github.com/ai-janitor/dead-drop-mcp"
Repository = "https://github.com/ai-janitor/dead-drop-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/dead_drop"]
